class Load:
    def __init__(self, name: str, bus1_name: str, mw:float, mvar:float,):
        self.name = name
        self.bus1_name = bus1_name
        self.mw = mw
        self.mvar = mvar
